After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793896 - rtspclientsink: if OPEN failed, unqueue next command
rtspclientsink: if OPEN failed, unqueue next command
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
unspecified
Other All
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-02-27 19:37 UTC by Mathieu Duponchelle
Modified: 2018-02-27 19:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtspclientsink: if OPEN failed, unqueue next command (1.17 KB, patch)
2018-02-27 19:37 UTC, Mathieu Duponchelle
committed Details | Review

Description Mathieu Duponchelle 2018-02-27 19:37:10 UTC
As READY_TO_PAUSED can no longer return async, the RECORD
command will be queued before the OPEN command fails
(for example in case the server could not be connected),
and record then waits for ever.
Comment 1 Mathieu Duponchelle 2018-02-27 19:37:16 UTC
Created attachment 369057 [details] [review]
rtspclientsink: if OPEN failed, unqueue next command
Comment 2 Mathieu Duponchelle 2018-02-27 19:55:51 UTC
Attachment 369057 [details] pushed as 6f308da - rtspclientsink: if OPEN failed, unqueue next command